@@ -1,6 +1,9 @@
 === Desk Mess Mirrored ===
 Changelog: February 23, 2013
 == Version 2.1.1 ==
+= CSS =
+* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
+
 = Miscellaneous =
 * Updated 'style.css' header block to use labels as noted in core trac ticket #16868
 
